fix(input): fix border and box shadow on ios
ios platform was overriding border and box-shadow styles.  added webkit property to prevent this on
ios devices.

github issue #627

--- a/src/components/input/styles/CdrInput.scss
+++ b/src/components/input/styles/CdrInput.scss
@@ -48,6 +48,12 @@
   overflow: visible;
   margin: 0;
 
+  /* Prevent iOS from altering border and box-shadow */
+  @supports (-webkit-overflow-scrolling: touch) {
+    /* CSS specific to iOS devices */
+    -webkit-appearance: none;
+  }
+
   /* States
   ---------- */
   &[disabled] {
